# CS454_Team14_proj

./: .gitignore  QUICKSTART.md  README.md  main.py  pyproject.toml  run.bat  setup_uv.bat  setup_uv.sh  verify_setup.py
examples/: batch_optimize_all_models.py  run_optimization.py  test_single_gene.py  use_real_model.py  validate_dataflows.py
models/: README.md
scripts/: download_model.py
src/pe_mapper/: __init__.py  batch_optimizer.py  dataflow_validation.py  fitness.py  gene.py  nsga2_optimizer.py  onnx_parser.py  timeloop_integration.py
timeloop_output/: README.md
